# dynamite-compiler

./: .gitignore  Cargo.toml  Makefile  README.md  test.sh
.github/workflows/: ci.yaml  publish.yaml
dockerfiles/: dev.Dockerfile
src/: assembly.rs  ast.rs  ctype.rs  error.rs  func.rs  generator.rs  global.rs  instruction.rs  lib.rs  main.rs  node.rs  token.rs  tokenizer.rs  trie.rs
src/aarch64/: assembly.rs  generator.rs  instruction.rs
src/generator/: mod.rs
src/generator/aarch64/: assembly.rs  generator.rs  instruction.rs  mod.rs
src/generator/llvm/: generator.rs
src/generator/x86_64/: assembly.rs  generator.rs  instruction.rs
src/x86_64/: assembly.rs  generator.rs  instruction.rs
test/: expr.c  functions.c  string.c  test.c  test.sh
tests/: integration_test.rs
tests/c/: character_constant.c  expr.c  many_functions.c  simple.c  simple_expr.c  simple_function.c  string.c  test.c
